--- a/index.html
+++ b/index.html
@@ -24,42 +24,42 @@
     </div>
 
     <div class="board">
-        <div class="card">+</div>
-        <div class="card">+</div>
-        <div class="card">+</div>
-        <div class="card">+</div>
-        <div class="card">+</div>
-        <div class="card">+</div>
-        <div class="card">+</div>
-        <div class="card">+</div>
-        <div class="card">+</div>
-        <div class="card">+</div>
-        <div class="card">+</div>
-        <div class="card">+</div>
-        <div class="card">+</div>
-        <div class="card">+</div>
-        <div class="card">+</div>
-        <div class="card">+</div>
-        <div class="card">+</div>
-        <div class="card">+</div>
-        <div class="card">+</div>
-        <div class="card">+</div>
-        <div class="card">+</div>
-        <div class="card">+</div>
-        <div class="card">+</div>
-        <div class="card">+</div>
-        <div class="card">+</div>
-        <div class="card">+</div>
-        <div class="card">+</div>
-        <div class="card">+</div>
-        <div class="card">+</div>
-        <div class="card">+</div>
-        <div class="card">+</div>
-        <div class="card">+</div>
-        <div class="card">+</div>
-        <div class="card">+</div>
-        <div class="card">+</div>
-        <div class="card">+</div>
+        <div class="card card-open">O</div>
+        <div class="card card-found">G</div>
+        <div class="card card-closed">+</div>
+        <div class="card card-closed">+</div>
+        <div class="card card-closed">+</div>
+        <div class="card card-closed">+</div>
+        <div class="card card-closed">+</div>
+        <div class="card card-closed">+</div>
+        <div class="card card-closed">+</div>
+        <div class="card card-closed">+</div>
+        <div class="card card-closed">+</div>
+        <div class="card card-closed">+</div>
+        <div class="card card-closed">+</div>
+        <div class="card card-closed">+</div>
+        <div class="card card-closed">+</div>
+        <div class="card card-closed">+</div>
+        <div class="card card-closed">+</div>
+        <div class="card card-closed">+</div>
+        <div class="card card-closed">+</div>
+        <div class="card card-closed">+</div>
+        <div class="card card-closed">+</div>
+        <div class="card card-closed">+</div>
+        <div class="card card-closed">+</div>
+        <div class="card card-closed">+</div>
+        <div class="card card-closed">+</div>
+        <div class="card card-closed">+</div>
+        <div class="card card-closed">+</div>
+        <div class="card card-closed">+</div>
+        <div class="card card-closed">+</div>
+        <div class="card card-closed">+</div>
+        <div class="card card-closed">+</div>
+        <div class="card card-closed">+</div>
+        <div class="card card-closed">+</div>
+        <div class="card card-closed">+</div>
+        <div class="card card-closed">+</div>
+        <div class="card card-closed">+</div>
     </div>
 
     <div class="high-score">
@@ -107,6 +107,8 @@
             <input type="color" id="cardColorFound" name="cardColorFound" value="#89f357"/>
             <label for="cardColorFound">Kaartkleur Gevonden</label>
         </div>
+
+        <button id="startGame">Nieuw spel</button>
     </div>
 </div>
 
