--- a/index.html
+++ b/index.html
@@ -23,43 +23,43 @@
         </div>
     </section>
 
-    <section class="board">
-        <div class="card card-open">O</div>
-        <div class="card card-found">G</div>
-        <div class="card card-closed">+</div>
-        <div class="card card-closed">+</div>
-        <div class="card card-closed">+</div>
-        <div class="card card-closed">+</div>
-        <div class="card card-closed">+</div>
-        <div class="card card-closed">+</div>
-        <div class="card card-closed">+</div>
-        <div class="card card-closed">+</div>
-        <div class="card card-closed">+</div>
-        <div class="card card-closed">+</div>
-        <div class="card card-closed">+</div>
-        <div class="card card-closed">+</div>
-        <div class="card card-closed">+</div>
-        <div class="card card-closed">+</div>
-        <div class="card card-closed">+</div>
-        <div class="card card-closed">+</div>
-        <div class="card card-closed">+</div>
-        <div class="card card-closed">+</div>
-        <div class="card card-closed">+</div>
-        <div class="card card-closed">+</div>
-        <div class="card card-closed">+</div>
-        <div class="card card-closed">+</div>
-        <div class="card card-closed">+</div>
-        <div class="card card-closed">+</div>
-        <div class="card card-closed">+</div>
-        <div class="card card-closed">+</div>
-        <div class="card card-closed">+</div>
-        <div class="card card-closed">+</div>
-        <div class="card card-closed">+</div>
-        <div class="card card-closed">+</div>
-        <div class="card card-closed">+</div>
-        <div class="card card-closed">+</div>
-        <div class="card card-closed">+</div>
-        <div class="card card-closed">+</div>
+    <section class="board" id="board">
+<!--        <div class="card card-open">O</div>-->
+<!--        <div class="card card-found">G</div>-->
+<!--        <div class="card card-closed">+</div>-->
+<!--        <div class="card card-closed">+</div>-->
+<!--        <div class="card card-closed">+</div>-->
+<!--        <div class="card card-closed">+</div>-->
+<!--        <div class="card card-closed">+</div>-->
+<!--        <div class="card card-closed">+</div>-->
+<!--        <div class="card card-closed">+</div>-->
+<!--        <div class="card card-closed">+</div>-->
+<!--        <div class="card card-closed">+</div>-->
+<!--        <div class="card card-closed">+</div>-->
+<!--        <div class="card card-closed">+</div>-->
+<!--        <div class="card card-closed">+</div>-->
+<!--        <div class="card card-closed">+</div>-->
+<!--        <div class="card card-closed">+</div>-->
+<!--        <div class="card card-closed">+</div>-->
+<!--        <div class="card card-closed">+</div>-->
+<!--        <div class="card card-closed">+</div>-->
+<!--        <div class="card card-closed">+</div>-->
+<!--        <div class="card card-closed">+</div>-->
+<!--        <div class="card card-closed">+</div>-->
+<!--        <div class="card card-closed">+</div>-->
+<!--        <div class="card card-closed">+</div>-->
+<!--        <div class="card card-closed">+</div>-->
+<!--        <div class="card card-closed">+</div>-->
+<!--        <div class="card card-closed">+</div>-->
+<!--        <div class="card card-closed">+</div>-->
+<!--        <div class="card card-closed">+</div>-->
+<!--        <div class="card card-closed">+</div>-->
+<!--        <div class="card card-closed">+</div>-->
+<!--        <div class="card card-closed">+</div>-->
+<!--        <div class="card card-closed">+</div>-->
+<!--        <div class="card card-closed">+</div>-->
+<!--        <div class="card card-closed">+</div>-->
+<!--        <div class="card card-closed">+</div>-->
     </section>
 
     <section class="high-score">
@@ -79,8 +79,8 @@
 
     <section class="settings">
         <div>
-            <label for="cardCharacters">Karakter op kaarten:</label>
-            <select name="cardCharacters" id="cardCharacters">
+            <label for="cardCharacter">Karakter op kaarten:</label>
+            <select name="cardCharacter" id="cardCharacter">
                 <option value="a">a</option>
                 <option value="b">b</option>
                 <option value="c">c</option>
@@ -112,5 +112,7 @@
     </section>
 </div>
 
+<!-- js file -->
+<script type="module" src="script.js"></script>
 </body>
 </html>
