--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
         <div>
             <label for="cardCharacter">Karakter op kaarten:</label>
             <select name="cardCharacter" id="cardCharacter">
-                <option value="a">a</option>
-                <option value="b">b</option>
-                <option value="c">c</option>
-                <option value="d">d</option>
+                <option value="+">+</option>
+                <option value="-">-</option>
+                <option value="*">*</option>
+                <option value="#">#</option>
             </select>
         </div>
 
