--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section class="header">
         <h1>JavaScript Memory</h1>
         <p>Verlopen tijd: <span id="elapsedTime">1</span></p>
-        <p>Gevonden kaart-paren: <span id="foundPairs">1</span></p>
+        <p>Gevonden kaart-paren: <span id="foundPairs">0</span></p>
 
         <div>
             <label for="remainingShowTime">Resterende toontijd:</label>
@@ -23,44 +23,7 @@
         </div>
     </section>
 
-    <section class="board" id="board">
-<!--        <div class="card card-open">O</div>-->
-<!--        <div class="card card-found">G</div>-->
-<!--        <div class="card card-closed">+</div>-->
-<!--        <div class="card card-closed">+</div>-->
-<!--        <div class="card card-closed">+</div>-->
-<!--        <div class="card card-closed">+</div>-->
-<!--        <div class="card card-closed">+</div>-->
-<!--        <div class="card card-closed">+</div>-->
-<!--        <div class="card card-closed">+</div>-->
-<!--        <div class="card card-closed">+</div>-->
-<!--        <div class="card card-closed">+</div>-->
-<!--        <div class="card card-closed">+</div>-->
-<!--        <div class="card card-closed">+</div>-->
-<!--        <div class="card card-closed">+</div>-->
-<!--        <div class="card card-closed">+</div>-->
-<!--        <div class="card card-closed">+</div>-->
-<!--        <div class="card card-closed">+</div>-->
-<!--        <div class="card card-closed">+</div>-->
-<!--        <div class="card card-closed">+</div>-->
-<!--        <div class="card card-closed">+</div>-->
-<!--        <div class="card card-closed">+</div>-->
-<!--        <div class="card card-closed">+</div>-->
-<!--        <div class="card card-closed">+</div>-->
-<!--        <div class="card card-closed">+</div>-->
-<!--        <div class="card card-closed">+</div>-->
-<!--        <div class="card card-closed">+</div>-->
-<!--        <div class="card card-closed">+</div>-->
-<!--        <div class="card card-closed">+</div>-->
-<!--        <div class="card card-closed">+</div>-->
-<!--        <div class="card card-closed">+</div>-->
-<!--        <div class="card card-closed">+</div>-->
-<!--        <div class="card card-closed">+</div>-->
-<!--        <div class="card card-closed">+</div>-->
-<!--        <div class="card card-closed">+</div>-->
-<!--        <div class="card card-closed">+</div>-->
-<!--        <div class="card card-closed">+</div>-->
-    </section>
+    <section class="board" id="board"></section>
 
     <section class="high-score">
         <div>
