--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Memory</title>
 
     <!-- css file -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/card.css">
 </head>
 <body>
 
@@ -57,17 +58,17 @@
         </div>
 
         <div>
-            <input type="color" id="cardColor" name="cardColor" value="#89f357"/>
-            <label for="cardColor">Kaartkleur Dicht</label>
+            <input type="color" id="cardColorClosed" name="cardColor" value="#89f357"/>
+            <label for="cardColorClosed">Kaartkleur Dicht</label>
         </div>
 
         <div>
-            <input type="color" id="cardColorOpen" name="cardColorOpen" value="#89f357"/>
+            <input type="color" id="cardColorOpen" name="cardColorOpen" value="#008000"/>
             <label for="cardColorOpen">Kaartkleur Open</label>
         </div>
 
         <div>
-            <input type="color" id="cardColorFound" name="cardColorFound" value="#89f357"/>
+            <input type="color" id="cardColorFound" name="cardColorFound" value="#800080"/>
             <label for="cardColorFound">Kaartkleur Gevonden</label>
         </div>
 
