--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         </div>
 
         <p>Gemiddelde speeltijd: <span id="avaragePlayTime">1</span></p>
+        <p>Huidige speeltijd: <span id="currentPlayTime"></span></p>
     </section>
 
     <section class="settings">
