--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
         </div>
 
         <div>
+            <label for="cardContent">Op de kaart:</label>
+            <select name="cardContent" id="cardContent">
+                <option value="letterCards">Letters</option>
+                <option value="randomImageCards">Foto's</option>
+            </select>
+        </div>
+
+        <div>
             <label for="boardSize">Afmeting bord:</label>
             <input type="number" id="boardSize" name="boardSize" min="2" max="20" value="6"/>
         </div>
