Week 5 - register pagina

--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
         </div>
 
         <button id="startGame">Nieuw spel</button>
+
+        <a href="register.html">Register</a>
     </section>
 </div>
 
