--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
     <!-- css file -->
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/card.css">
+    <script src="js/index.js" defer></script>
 </head>
 <body>
 
 <div class="wrapper">
     <section class="header">
         <h1>JavaScript Memory</h1>
+        <div id="auth-buttons">
+            <a href="register.html">Register</a> - <a href="login.html">Login</a>
+        </div>
+        <button id="logout-button" style="display: none;">Logout</button>
         <p>Verlopen tijd: <span id="elapsedTime">1</span></p>
         <p>Gevonden kaart-paren: <span id="foundPairs">0</span></p>
 
@@ -82,8 +87,6 @@
         </div>
 
         <button id="startGame">Nieuw spel</button>
-
-        <a href="register.html">Register</a>
     </section>
 </div>
 
