--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <!-- css file -->
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/card.css">
+
+    <script src="js/fetch-overload.js"></script>
     <script src="js/index.js" defer></script>
 </head>
 <body>
