--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
     </section>
 
     <section class="settings">
+        <a href="preferences.html">Voorkeuren</a>
+
         <div>
             <label for="cardCharacter">Karakter op kaarten:</label>
             <select name="cardCharacter" id="cardCharacter">
