Week 5 - Jwt expires

--- a/preferences.html
+++ b/preferences.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Preferences</title>
     <link rel="stylesheet" href="css/preferences.css">
+
+    <script src="js/jwt-check.js"></script>
     <script src="js/fetch-overload.js"></script>
     <script src="js/preferences.js" defer></script>
 </head>
