--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/card.css">
 
+    <script src="js/jwt-check.js"></script>
     <script src="js/fetch-overload.js"></script>
     <script src="js/index.js" defer></script>
 </head>
